Pulling in changes from Smartling

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -357,8 +357,8 @@ af:
             add friend button title: "Stuur 'n vriendskap versoek aan %{user}"
             accept button: "Aanvaar"
             accept request button: "Aanvaar versoek"
-            ignore button: "Verval"
-            ignore request button: "Laat versoek verval"
+            ignore button: "Van die hand wys"
+            ignore request button: "Wys versoek van die hand"
     notes: 
         none user: "%{username} het nog nie enige notas gemaak nie."
         blank slate: 
@@ -472,11 +472,11 @@ af:
         edit connections: "Gekoppelde Rekeninge"
         edit devices: "Gekoppelde Toestelle"
         vod_subscriptions: "Vers van die Dag Intekeninge"
-        vod_subscription success: "Jy het jou Vers van die Dag intekening suksesvol opgedateer!"
+        vod_subscription success: "Jy het jou \"Vers vir die Dag\" intekening suksesvol opgedateer!"
         vod_subscription failure: "Jammer, daar was 'n probleem met die opdatering van jou Verse van die Dag intekening."
         daily email delivery: "Daaglikse epos aflewering"
         time: "Tyd"
-        daily push notifications: "Daaglikse deurgedrukte kennisgewings vir mobiele toeps"
+        daily push notifications: "Daaglikse kennisgewings vir mobiele apps"
         subscribe: "Teken In"
         unsubscribe: "Kanselleer Intekening"
         edit account_existence: "Sluit Rekening"
@@ -485,7 +485,7 @@ af:
         no devices download copy: "Gebaseer op die aanlyn Bybel, YouVersion, die Bybel Toep is 'n gratis mobiele Bybel wat op bykans enige toestel geïnstalleer kan word. Die Bybel Toep laat gebruikers toe om die Bybel te lees, verse te deel met sosiale netwerke, gunsteling gedeeltes te boekmerk en vele meer&amp;mdash:all in 'n formaat wat tred hou met die snelgroeiende mobiele leefstyl. Besoek <a href='https://www.bible.com/app'>bible.com/app</a>  van jou mobiele toestel om die Bybel Toep af te laai en te koppel jou rekening!"
         yes delete: "Ja, Sluit My Rekening"
         account delete success: "Jou YouVersion rekening is suksesvol gesluit. Ons hoop dat jy sal voortgaan om betekenisvolle maniere te vind om interaktief met die Bybel te verkeer. Van hierdie apps mag dalk handig te pas kom soos jy aanbeweeg:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Wanneer jy jou rekening uitvee, verwyder jy al jou informasie, geskiedenis en verpersoonliking (soos notas, boekmerke, hoogtepunte ens.) binne die Bible.com en BibleApp sfeer permanent. Hierdie aksie kan nie deur uself of deur ons span ongedaan gemaak word nie. As u seker is u wil voortgaan, doen so hieronder."
+        delete account description: "Wanneer jy jou rekening uitvee, verwyder jy al jou informasie, geskiedenis en verpersoonliking (soos notas, boekmerke, kleurkodering, ens.) binne die Bible.com en BibleApp sfeer vir altyd. Hierdie aksie kan nie deur uself of deur ons span ongedaan gemaak word nie. As u seker is u wil voortgaan, doen so hieronder."
         user recent activity: "%{user} se Onlangse Aktiwiteite"
         my notes: "Notas"
         user notes: "%{user} se Notas"
@@ -645,7 +645,7 @@ af:
             badges: "Stel my in kennis van enige kentekens wat ek verwerf het."
             follower: "Stel my in kennis as iemand my volg."
             newsletter: "Hou my op hoogste van YouVersion aankondigings."
-            contact_joins: "Stel my in kennis wanneer 'n kontak aansluit"
+            contact_joins: "Stel my in kennis wanneer 'n Kontak aansluit"
             note_like: "Stel my in kennis as iemand van my notas hou."
             reading_plans: "Stel my in kennis van informasie vir leesplanne wat ek begin het."
             publishing partners: "Hou my op hoogte met nuus van YouVersion se inhouds vennote."
@@ -665,7 +665,7 @@ af:
         labels label: "Etikette:"
         title: "Boekmerke"
         my labels: "My Etikette"
-        all labels: "Show All"
+        all labels: "Wys Alles"
         not found: "Boekmerke gee jou 'n vinnige terugverwysingsgids na jou gunsteling gedeeltes of na die laaste hoofstuk wat jy in 'n spesifieke boek gelees het. Om 'n boekmerk by te voeg, kies 'n vers in die Bybel leser en kliek dan die seleksie knoppie bo aan die leser."
         other user not found: "%{username} het nog nie enige boekmerke gestoor nie."
         creation form errors: "Die volgende fout(e) het verhoed dat jy 'n boekmerk kon skep:"
