--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -665,7 +665,7 @@ de:
         labels label: "Etiketten:"
         title: "Lesezeichen"
         my labels: "Meine Etiketten"
-        all labels: "Show All"
+        all labels: "Alle Anzeigen"
         not found: "Lesezeichen geben dir eine Übersicht über deine Lieblingsstellen oder bringen dich wieder zu dem Kapitel, das du zuletzt gelesen hast. Um ein Lesezeichen hinzuzufügen, wähle den gewünschten Vers in der Leseansicht und klicke oben auf \"Ausgewählt\"."
         other user not found: "%{username} hat bisher keine Lesezeichen gespeichert."
         creation form errors: "Folgende(r) Fehler verhindern die Erstellung deines Lesezeichens:"
@@ -1006,7 +1006,7 @@ de:
                 subscribe heading: "Abonniere Bibellesepläne."
                 subscribe description: "Entdecke die ganze Bibel, konzentriere dich auf ein Thema oder lies die Andacht von einem begabten Lehrer. Wähle einen Leseplan aus, dann wartet jeden Tag ein Bibelabschnitt auf dich."
                 download heading: "Nimm die Bibel mit."
-                download description: "<a href='https://bible.com/download'>Lade</a> die Bibel App kostenlos auf ein Smartphone herunter. Beim Gebrauch der Bibel App werden deine Notizen, Lesezeichen, Markierungen, Lesepläne usw. automatisch auf allen deinen Geräten synchronisiert."
+                download description: "<a href='https://bible.com/download'>Lade </a>die Bibel App kostenlos auf ein Smartphone herunter. Beim Gebrauch der Bibel App werden deine Notizen, Lesezeichen, Markierungen, Lesepläne usw. automatisch auf allen deinen Geräten synchronisiert."
             get started: "Fang an mit einem kostenlosen YouVersion-Konto."
             word with you: "Gottes Wort ist mit dir."
             download action: "Lade die Bibel App herunter."
