--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -212,7 +212,7 @@ es-ES:
     save: "Guardar"
     cancel: "Cancelar"
     try the beta: "Intenta la versión Beta"
-    welcome to the beta: "Bienvenido a Biblia.com"
+    welcome to the beta: "¡Bienvenido a Biblia.com!"
     highlight: "Resalta el versículo"
     comment: "Nuevo Comentario"
     note: "Nueva nota"
@@ -485,7 +485,7 @@ es-ES:
         no devices download copy: "Basado en la Biblia online, YouVersion, la Biblia App es una Biblia gratis para móviles que puede ser instalada en casi cualquier dispositivo. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en las redes sociales, marcar los pasajes preferidos y mucho más— todo en un formato que va contigo en tu vida cada vez más dinámica. Visita <a href='https://www.bible.com/app'>bible.com/app</a> desde tu dispositivo movil, descarga la Biblia App y conecta con tu cuenta de usuario."
         yes delete: "Si, eliminar mi cuenta"
         account delete success: "Tu cuenta YouVersion ha sido eliminada con éxito. Esperamos que sigas encontrando formas significativas de leer la Biblia. Algunas de estas aplicaciones pueden ser de gran ayuda para seguir adelante: <a href=http://www.youversion.com/free-bible-apps> http://youversion.com/free-bible-apps</a>"
-        delete account description: "Si borras tu cuenta, eliminarás permanentemente toda tu información, historial, y personalización (notas, destacados, subrayados, etc.) en Biblia.com y la Biblia.App. Esta acción no puede deshacerse ni por ti ni por nuestro equipo. Si estás seguro de querer seguir adelante, procede según se indica más abajo."
+        delete account description: "Si borras tu cuenta, eliminarás permanentemente toda tu información, historial, y personalización (como notas, destacados, subrayados, etc.) en Biblia.com y la Biblia.App. Esta acción no puede deshacerse ni por ti ni por nuestro equipo. Si estás seguro de querer seguir adelante, procede según se indica más abajo."
         user recent activity: "Actividad reciente de %{user}"
         my notes: "Notas"
         user notes: "Notas de %{user}"
@@ -645,7 +645,7 @@ es-ES:
             badges: "Notificarme sobre las insignias que he ganado."
             follower: "Notificarme cuando alguien me siga."
             newsletter: "Mantenerme informado con los anuncios de YouVersion."
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "Avisarme cuando un Contacto se una"
             note_like: "Notificarme cuando a alguien le gusten mis notas."
             reading_plans: "Notificarme con información sobre los planes de lectura que haya iniciado."
             publishing partners: "Mantenerme al día con las noticias de los socios de YouVersion."
@@ -665,7 +665,7 @@ es-ES:
         labels label: "Eiquetas:"
         title: "Marcadores"
         my labels: "Mis etiquetas"
-        all labels: "Show All"
+        all labels: "Mostrar Todo"
         not found: "Los marcadores te darán una guía de referencia rápida a tus pasajes favoritos o al último capítulo que leíste de un libro en particular. Para agregar un marcador, selecciona un versículo en el lector de la Biblia y luego haz clic en el botón Seleccionado en la parte superior del lector."
         other user not found: "%{username} no ha guardado ningún marcador todavía."
         creation form errors: "Los siguientes errores impidieron la creación de tu marcador:"
@@ -915,7 +915,7 @@ es-ES:
         creation form errors: "El siguiente error(es) no ha permitido hacer la donación:"
     download ad: 
         title: "Descargar la Bible App gratis."
-        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
+        description copy: "Cientos de versiones en más de %{language_count}idiomas diferentes - la Biblia que va contigo a todas partes."
         line 1: "Cientos de versiones en 100+"
         line 2: "diferentes idiomas - la Biblia"
         line 3: "que va contigo donde quieras."
@@ -943,7 +943,7 @@ es-ES:
         facebook: "YouVersion en Facebook"
         twitter: "YouVersion en Twitter"
         support: "¿Necesitas ayuda con YouVersion?"
-        lead copy: "Basada en la Biblia online, Biblia.com, la Biblia App es una Biblia para móviles gratuita que puede ser instalada en casi cualquier teléfono. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en redes sociales, crear destacados con los pasajes favoritos, y mucho más. Todo en un formato que te mantiene al día con el estilo cada vez más activo de los móviles."
+        lead copy: "Basada en la Biblia online, Biblia.com, la Biblia App es una Biblia para móviles gratuita que puede ser instalada en casi cualquier teléfono. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en sus redes sociales, crear destacados con los pasajes favoritos, y mucho más —todo en un formato que te mantiene al día con el estilo cada vez más activo de los móviles."
         resources title: "Recursos para prensa"
         now title: "Hoy en la Comunidad YouVersion"
         resources: 
@@ -963,7 +963,7 @@ es-ES:
     mobile page: 
         h2: "La Palabra de Dios está contigo."
         h3: "YouVersion es Global"
-        h3 sub: "Available in more than %{language_count} languages worldwide."
+        h3 sub: "Disponible en más de %{language_count} idiomas en todo el mundo."
         main: "Decenas de millones de personas están usando la Biblia App™ para hacer que la Palabra de Dios sea parte de sus vidas diarias. Descarga la aplicación gratuita y accede a tus marcadores, notas, y planes de lectura en cualquier lugar. Disfruta de cientos de versiones, incluyendo audio Biblia, todo en tu dispositivo móvil."
         button h4: "Ir a la Bible.com/app"
         button h4 sub: "En tu dispositivo móvil"
@@ -984,7 +984,7 @@ es-ES:
         symbian: "Symbian"
         mobile web: "Red móvil"
         amazon: "Kindle Fire"
-        free overlay: "100% Free"
+        free overlay: "Totalmente gratis"
     pages: 
         generic_error: 
             title: "Uy!"
