--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1006,7 +1006,7 @@ hi:
                 subscribe heading: "बाइबिल पाठक योजना के सदस्य बने।"
                 subscribe description: "सम्पूर्ण बाइबिल पढ़े,प्रत्येक विषय पर अपना ध्यान केंद्रित कर पढ़े ,या प्रतिभावान बाइबिल गुरु द्वारा तैयार डिवोशनल पढ़े।अपना पाठक योजना चुने और हर दिन आप पाएंगे आपके इंतज़ार में बाइबिल पाठक योजना।"
                 download heading: "बाइबिल हमेशा आपके साथ।"
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'>डाउनलोड</a>करिए बाइबिल App नि:शुल्क किसी भी मोबाइल डिवाइस पर।जब आप इस मोबाइल App का उपयोग करेंगे उस समय आपके द्वारा निर्मित हाईलाइट,बुकमार्क,पाठक योजना तथा और अधिक सामग्री स्वचालित आपके दूसरे डिवाइस से सिंक हो जायेगी।"
             get started: "अपना नि:शुल्क अकाउंट प्रारंभ करे।"
             word with you: "प्रभु का वचन हमेशा आपके साथ।"
             download action: "बाइबिल App डाउनलोड करे।"
