--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -665,7 +665,7 @@ mn:
         labels label: "Шошгууд:"
         title: "Хавчуургууд"
         my labels: "Миний Шошгууд"
-        all labels: "Show All"
+        all labels: "Бүгдийг Харуулах"
         not found: "Номны хавчуурга нь таны сүүлд уншиж байсан газраа санах, тодорхой нэг номны сүүлд уншссан бүлэг эсвэл дуртай догол мөрийн тайлбарыг шууд өгөх боломжийг өгдөг. Номын хавчуурга нэмэхийн тулд доторх ишлэлээ сонгоно, дараа нь өөрийнхөө Миний хуудас хадгалахын тулд номын хавчуурга гэсэн товчлуурыг дарна."
         other user not found: "%{username}  ямарч номын хавуурга хадгалаагүй байна."
         creation form errors: "Дараах алдаа(ууд) хавчуурга шинээр хийхэд саад болж байна:"
