--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -482,10 +482,10 @@ ms:
         edit account_existence: "Hapuskan Akaun"
         delete account button: "Hapuskan Akaun YouVersion Saya"
         no devices: "Tiada peranti yang terhubung ke Akaun YouVersion anda"
-        no devices download copy: "App Injil adalah Alkitab mobil percuma yang berdasarkan Alkitab online, YouVersion, yang boleh dipasang kepada hampir sebarang peranti mobil. App Injil ini membolehkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial mereka, bookmark petikan kegemaran, dan selainnya— segalanya dalam format yang sepadan dengan kehidupan yang semakin mobil. Kunjungilah <a href='https://www.bible.com/app'>bible.com/app</a> dari peranti mobil anda untuk download App Injil dan bersambung ke akaun anda!"
+        no devices download copy: "Berdasarkan Alkitab online, YouVersion.com, App Alkitab merupakan Alkitab mobil percuma yang boleh dimuat turun dalam hampir semua peranti.<a href='https://www.bible.com/app'>App Alkitab membolehkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial mereka, bookmark ayat kegemaran mereka, dan banyak lagi- melalui format yang seiring dengan gaya hidup mudah alih yang semakin berkembang. </a> Layari bible.com/app dari peranti mudah alih anda untuk memuat turun App Alkitab dan hubungkan akaun anda!"
         yes delete: "Ya, Hapuskan Akaun Saya"
         account delete success: "Akaun YouVersion anda sudah selesai dihapuskan. Kami harap anda terus berinteraksi dengan Alkitab. Anda mungkin mendapat bantuan dari beberapa app di sini: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Jika anda menghapuskan akaun, informasi, sejarah, dan input peribadi (seperti nota, bookmark, highlight dan selainnya) dalam Bible.com dan App Injil akan kekal dihapuskan. Tindakan ini tidak boleh diterbalikkan oleh anda ataupun kami. Jika anda pasti, sila berterusan di bawah. "
         user recent activity: "Aktiviti Terkini %{user}"
         my notes: "Nota"
         user notes: "Nota %{user}"
@@ -636,7 +636,7 @@ ms:
             notification errors: "Notifikasi anda tidak di-update akibat kesilapan berikut:"
             edit: "Mengedit"
             bio: "Bio"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Lengkapkan profil anda dengan mengisikan nama pertama dan nama keluarga anda"
         password: 
             updated: "Ya! Kata laluan anda sudah di-update."
             error: "Maaf, ada kesilapan semasa mengubah kata laluan anda."
@@ -645,7 +645,7 @@ ms:
             badges: "Beritahu saya tentang lencana yang saya perolehi."
             follower: "Beritahu saya bila seseorang mengikuti saya."
             newsletter: "Saya ingin menerima pengumuman YouVersion yang baru."
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "Beritahu saya apabila Kenalan menyertai"
             note_like: "Beritahu saya bila seseorang \"like\" nota saya."
             reading_plans: "Beritahu saya bila ada maklumat baru tentang pelan bacaan saya."
             publishing partners: "Beritahu saya berita terbaru dari rakan kongsi kandungan YouVersion."
@@ -665,7 +665,7 @@ ms:
         labels label: "Label"
         title: "Bookmark"
         my labels: "Label saya"
-        all labels: "Show All"
+        all labels: "Tunjuk semua"
         not found: "Bookmark membenarkan anda merujuk pantas ke petikan kegemaran ataupun bab terakhir yang dibaca dalam kitab. Untuk menambah bookmark, pilihilah suatu ayat dalam pembaca Alkitab dan klik butang Terpilih di bahagian atas pembaca."
         other user not found: "%{username} belum menyelamatkan sebarang bookmark."
         creation form errors: "Kesilapan berikut menghalang penciptaan bookmark:"
@@ -914,8 +914,8 @@ ms:
         zip: "Poskod"
         creation form errors: "Kesilapan berikut menghalang sumbangan anda:"
     download ad: 
-        title: "Download App Injil yang Percuma"
-        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
+        title: "Muat turun App Alkitab secara Percuma"
+        description copy: "Beratus versi dalam %{language_count}+ bahasa berlainan - Alkitab yang mengikuti anda ke mana sahaja."
         line 1: "Beratusan versi dalam 100+"
         line 2: "bahasa yang berbeza - Alkitab yang"
         line 3: "menurut anda ke manapun."
@@ -943,19 +943,19 @@ ms:
         facebook: "YouVersion di Facebook"
         twitter: "YouVersion di Twitter"
         support: "Perlu bantuan dengan YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Berdasarkan Alkitab online, Bible.com, App Alkitab adalah Alkitab mobil percuma yang boleh dimuat turun dalam hampir semua peranti. App Alkitab ini membolehkan pengguna membaca Alkitab, berkongsi ayat kepada jaringan sosial mereka, bookmark petikan kegemaran, dan banyak lagi— segalanya dalam format yang sepadan dengan gaya hidup mudah alih yang semakin berkembang."
         resources title: "Sumber Media"
         now title: "Hari ini, dalam komuniti YouVersion"
         resources: 
             now: "Nikmati interaksi dan lihat data terbaru secara langsung"
-            about: "Tentang YouVersion dan App Injil"
+            about: "Tentang YouVersion dan App Alkitab"
             history: "Sejarah dan Statistik YouVersion"
             manual: "Buku Pengguna Jenama YouVersion"
         images title: "Logo dan Imej YouVersion"
         images: 
             logos: "Pakej Logo YouVersion"
-            icons: "Simbol App Injil"
-            infographic: "Infografik: Statistik dan Penggunaan App Injil"
+            icons: "Icon App Alkitab"
+            infographic: "Infografik: Statistik dan Penggunaan App Alkitab"
             devices: "Kutipan Imej: Peranti"
             lifestyle: "Kutipan Imej: Lifestyle"
             screencast: "Screencast YouVersion"
@@ -963,11 +963,11 @@ ms:
     mobile page: 
         h2: "Firman Allah ada bersama anda."
         h3: "YouVersion kini Global"
-        h3 sub: "Available in more than %{language_count} languages worldwide."
-        main: "Berpuluh juta orang kini mengguna App Injil™ dan menjadikan Firman Allah sebahagian daripada kehidupan setiap hari. Download app percuma dan akses bookmark, nota, dan pelan bacaan dari mana pun. Nikmati beratus versi Alkitab, termasuk audio, pada peranti mobil anda."
+        h3 sub: "Boleh didapati dalam lebih daripada %{language_count} bahasa di seluruh dunia."
+        main: "Berpuluh juta orang kini mengguna App Alkitab™ untuk  menjadikan Firman Allah sebahagian daripada kehidupan setiap hari. Muat turun app percuma dan akses bookmark, nota, dan pelan bacaan dari mana pun. Nikmati beratus versi Alkitab, termasuk audio, pada peranti mobil anda."
         button h4: "Terus ke Bible.com/app"
         button h4 sub: "Pada Peranti Mobil Anda"
-        download now: "Download App Injil Sekarang"
+        download now: "Muat turun App Alkitab Sekarang"
         what people: "Pendapat orang lain tentang app Alkitab percuma ini..."
         t1: "Saya sentiasa ada Firman bersama saya."
         t1 copy: "Petikan yang penting sudah saya bookmark. Malah dengan bantuan pelan bacaan, saya sudah membaca kesulruhannya dalam masa satu tahun."
@@ -984,7 +984,7 @@ ms:
         symbian: "Symbian"
         mobile web: "Web Mobil"
         amazon: "Kindle Fire"
-        free overlay: "100% Free"
+        free overlay: "100% Percuma"
     pages: 
         generic_error: 
             title: "Maaf!"
@@ -1084,7 +1084,7 @@ ms:
                 copy: "Baca, Dengar, Tonton, Kongsi. Dapatkan App Bible untuk smartphone dan tablet anda: <a href='http://bible.com/app'>Muat Turun Sekarang</a>"
             sidebar: 
                 tagline: "Ayuh mencipta sejarah bersama"
-                button: "Kongsi App Injil"
+                button: "Kongsi App Alkitab"
     ui: 
         characters remaining: "baki karakter"
         yes button: "Ya"
